@@ -178,6 +178,7 @@ enum copy_variants {
     COPY_TEXT,
     COPY_HTML,
     COPY_LATEX,
+    COPY_LATEX_EQUATION,
     COPY_RTF
 };
 
